[Chromium] ContextFeaturesClient::isEnabled is slow https://bugs.webkit.org/show_bug.cgi?id=90367

Reviewed by Kent Tamura.

Source/WebCore:

* dom/ContextFeatures.h:
(WebCore::ContextFeaturesClient::urlDidChange): Added.
(WebCore::ContextFeatures::urlDidChange): Added.
(WebCore):
* dom/Document.cpp:
(WebCore::Document::setURL): Added an urlDidChange() call.

Source/WebKit/chromium:

ContextFeaturesClientImpl::isEnabled touches a heavy part in chrome
where locks are acquired for each invocation.

This change introduces a set of caches to avoid such slow calls.
The cache class ContextFeaturesCache is implemented as a
Supplement of ScriptExecutionContext because the flag bits
depend on the domain of each Document.

* src/ContextFeaturesClientImpl.cpp:
(ContextFeaturesCache): Added.
(Entry): Added.
(WebKit::ContextFeaturesCache::Entry::Entry):
(WebKit::ContextFeaturesCache::Entry::isEnabled):
(WebKit::ContextFeaturesCache::Entry::set):
(WebKit::ContextFeaturesCache::Entry::needsRefresh):
(WebKit::ContextFeaturesCache::entryFor):
(WebKit):
(WebKit::ContextFeaturesCache::supplementName):
(WebKit::ContextFeaturesCache::from):
(WebKit::ContextFeaturesCache::refreshAgainst):
(WebKit::ContextFeaturesClientImpl::isEnabled):
(WebKit::ContextFeaturesClientImpl::urlDidChange): Added to invoke refrshAgainst.
(WebKit::ContextFeaturesClientImpl::askIfIsEnabled):
* src/ContextFeaturesClientImpl.h:
(ContextFeaturesClientImpl):


Canonical link: https://commits.webkit.org/108611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122099 268f45cc-cd09-0410-ab3c-d52691b4dbfc